[package]

name = "ladspa"
version = "0.2.1"
authors = ["Noah Weninger <nweninge@ualberta.ca>"]
description = "An interface for writing LADSPA plugins safely in Rust."
documentation = "http://deadmau6.com/doc/ladspa/"
repository = "https://github.com/nwoeanhinnogaehr/ladspa.rs"
license = "Unlicense"
keywords = ["audio", "ladspa", "dsp"]

[dependencies]
bitflags = "*"
vec_map = "*"

[lib]
name = "ladspa"
crate-type = ["rlib"]
