[package]

name = "ladspa"
version = "0.3.2"
authors = ["Noah Weninger <nweninge@ualberta.ca>"]
description = "An interface for writing LADSPA plugins safely in Rust."
documentation = "http://nwoeanhinnogaehr.github.io/ladspa.rs/ladspa"
repository = "https://github.com/nwoeanhinnogaehr/ladspa.rs"
license = "Unlicense"
keywords = ["audio", "ladspa", "dsp"]

[dependencies]
bitflags = "0.7.0"
vec_map = "0.6.0"

[lib]
name = "ladspa"
crate-type = ["rlib"]
